added referal link and other color coding fixes with images

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -675,13 +675,13 @@
     {
       "data": {
         "stringId": 544,
-        "text": "MountainDeFi to Harvest"
+        "text": "Coal to Harvest"
       }
     },
     {
       "data": {
         "stringId": 546,
-        "text": "MountainDeFi in Wallet"
+        "text": "Coal in Wallet"
       }
     },
     {
